# vibe-ensemble-mcp

./: .env.example  .gitignore  .mcp.json  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.optimized  Dockerfile.production  LICENSE  PHASE_5_COMPLETION.md  PLAN.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROTOCOL.md  README.md  SECURITY_AUDIT_REPORT.md  SQLX_OFFLINE_SETUP.md  TEST_SUITE_IMPLEMENTATION.md  TROUBLESHOOTING.md  build.rs  docker-compose.dev.yml  docker-compose.yml  release_notes.md  rust-toolchain.toml  temp_db.sqlite  test-macos-install.sh  vibe-ensemble.db-shm  vibe-ensemble.db-wal  vibe_ensemble.db-shm  vibe_ensemble.db-wal  websocket-implementation-plan.md
vibe-ensemble-core/: .mcp.json  .vibe-worker-config.json  Cargo.toml
vibe-ensemble-core/src/: agent.rs  config.rs  coordination.rs  error.rs  issue.rs  knowledge.rs  knowledge_intelligence.rs  lib.rs  message.rs  orchestration.rs  project.rs  prompt.rs
vibe-ensemble-mcp/: Cargo.toml
vibe-ensemble-mcp/src/: claude_code_integration_tests.rs  client.rs  communication_tests.rs  coordination_tests.rs  error.rs  integration_tests.rs  lib.rs  main.rs  protocol.rs  server.rs  transport.rs  transport_compliance_tests.rs
vibe-ensemble-mcp/tests/: coordinator_worker_integration.rs  coordinator_worker_integration.rs.disabled  phase_5_integration_tests.rs
vibe-ensemble-monitoring/: Cargo.toml
vibe-ensemble-monitoring/src/: config.rs  error.rs  health.rs  lib.rs  metrics.rs  observability.rs  server.rs  tests.rs  tracing_setup.rs
vibe-ensemble-prompts/: Cargo.toml
vibe-ensemble-prompts/src/: error.rs  lib.rs  manager.rs  renderer.rs  templates.rs
vibe-ensemble-security/: Cargo.toml
vibe-ensemble-security/.sqlx/: query-0a5458e8fd84dfe4e3bb55fdcd4e6ecb29f7e579945b7810855f4291ebe9c128.json  query-0ed2b9dd1584ac09e309e768f064d45dc92cbf9ce4925fba66d0e9946e3ab7ba.json  query-3dab7e157ac6ac556cbffb99365da6c707532ddc57dd77742aa18d07d803956c.json  query-442697db86fb2bc253918b91cb9444570a168525697f132d18c96dfa37f896f4.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-9fc7143f7d17c8086a327fd922c76f491cf48f1c1a760d67bcb5e5a82f220e85.json  query-d68183a5a48d497cc09800e8f8dba661ab73218adba1db84a305446af6157200.json  query-d7a02af016e205725a417340b93e2711632e3f73078d687b3b8223f4bcb04701.json  query-f92568a69298aaef86ec6a66b25b9f928c52f310914c17410cb3f9ba05037242.json
vibe-ensemble-security/src/: audit.rs  auth.rs  crypto.rs  error.rs  jwt.rs  lib.rs  middleware.rs  models.rs  permissions.rs  rate_limiting.rs  tests.rs
vibe-ensemble-server/: Cargo.toml
vibe-ensemble-server/src/: config.rs  config_tests.rs  error.rs  lib.rs  main.rs  server.rs
vibe-ensemble-storage/: Cargo.toml
vibe-ensemble-storage/.sqlx/: query-0438d63b1bd8c435a96861e70ad86ee70513d11f741339c4c847bafccdd6fca4.json  query-0ed2b9dd1584ac09e309e768f064d45dc92cbf9ce4925fba66d0e9946e3ab7ba.json  query-2487d5e958a22ca05ffce13d3f21baa177d4f87ef979251a3a49a6e516ea4318.json  query-2a04271c9e275dd7e04d5db870882dc99573fd1456f07a1df880ebb1f87a299d.json  query-43126dae609c14f9b3eb4fc71651ec44b319d10c503cf33cdbc045da19e6a124.json  query-490dda0e87985a0fb23ed0a11bca570dd3a046d8f6446fd113c0e0fbaa2aca83.json  query-54e56187a32cfc13901bbe417ad7e91df59e6f9b985659e63fc11f7be2f4c4d6.json  query-59b781c57bade04e3466235ed54139c66cee2b83fe74c7fb1e3b4dd2d0f0062d.json  query-5e7bc75665ed0895a3f7eb4f9b88c39c3f3c6dc4ed4822c68c862863a9a2e5b8.json  query-5f5d05b51b14fe9066c21e9ac7b41fa603fa2c6ba96f6db58d782ef62c0f9d78.json  query-62e78c0d05ffa2cf97eb5d549a08bafaa5510b1a2c6857f5cc2af4cab98b4d94.json  query-78e8c4e66767d18132ba1e272e147ee0cdb6b524e385289af53d3063507c9833.json  query-905b0923d7278f8d5d375635da718f5ca3c384b9676e46f43a461ca2302569b7.json  query-9417fbdd77f1b2cd6639c63fbaf0e147e775f0ca178e09ec1e52810fd558442e.json  query-94573324447f9e5bc503f7b3acc5a5a5254d75d972370621a34a8a03c7ecfaa0.json  query-95f030f94f669060f8afea3270accb2aefb79490a25058928dd041823359f174.json  query-9975e40801370c7798d3bdb5d4a8d89c094f299d1fe0d5b1d7e0d41309994a7d.json  query-9982f945a2e92ac38ad5821c8bdbf49b3753247eca1869e0d4d8ced53296e4ef.json  query-9c51925a7d718f428ee96780c8944a70d0ca13991624ebb8a22e03b90a30d4d9.json  query-a2061a026f3e7cce8c067f75ca444ef107526a3e53bbae5665ff38e5c1a5b533.json  query-ae3ef957081bae60666bd1cad7be58d57f940c0da10fc22e490f552cc2713655.json  query-bff811bb2f3dd2f3c83a9afde7ff2a9bb176d412c213685a7e357c9eb0e664d0.json  query-c559e653b67307e250b8e462dbbe9c26649e856aba59cf5d989dffd4593e431f.json  query-ce3d052f73fba5f4be8921b1b87bc3741f52185636cd5120c84769e54d922d76.json  query-d0ad9fb2ddadda0012eeb2859a367db2573555ba95de3ce9eb580faa5c785775.json  query-d4d897d623737cfc8b0ce2f072607a5fc93acfe5da6ece9d1e695362d14b2b45.json  query-e917b11d06fae3bc09a3500a4d25c7a9bb247ed941376b114db46accb9371ba4.json  query-e998b83cf3eb52c10d5bd0fa3479fdd4eb0376c6dd9d66bd2c1cd86bad71eb28.json  query-ef82d048763cfba96082517e7428c502ec15dae25aec95320ccb8b44f68af9bf.json
vibe-ensemble-storage/migrations/: 001_initial.sql  002_knowledge_enhancements.sql  003_prompt_enhancements.sql  004_security_layer.sql  005_knowledge_intelligence.sql  006_performance_indexes.sql  007_project_entities.sql
vibe-ensemble-storage/src/: concurrent_processing.rs  error.rs  lib.rs  manager.rs  message_optimization.rs  migrations.rs  network_optimization.rs  performance.rs
vibe-ensemble-web/: Cargo.toml
vibe-ensemble-web/.sqlx/: query-03cf703d7c2c4ca0f503f6a2e4261283412746033be6b0c4aa7c7daf5498d536.json  query-16506aecbf9bf6384643c1b71b316a59bec7214389020f9313fcdd968ec0c1df.json  query-57b55d6e2d4a09de2f6d9a79c6a325b2afd870234a4cb74a51427b16cdbb4168.json  query-5b1f9703a36c52bc3fae4a054f1eae7ac479e5bafcd86192b79e0883a37d61e7.json  query-5eda4d414b61c3e3ffa7becd2b534cb252c7766d7d3d8994916ca77e2f35ebe6.json  query-7222df513a8866a6fc097ed6bc29695421e721c56045fcd2089691e8d272e8e8.json  query-79d6ec6e0c3275438cf735d6637075398cb2e188b4d55df37eff9d7cabc4dd5f.json  (+2 more)
vibe-ensemble-web/src/: auth.rs  csrf.rs  error.rs  lib.rs  (+7 more)
(+391 files in other folders)
