[package]
name = "vibe-ensemble-mcp"
version = "0.5.0"
edition = "2021"
description = "Multi-agent coordination MCP server for Claude Code"
license = "Apache-2.0"
authors = ["Sergiy Yevtushenko"]
repository = "https://github.com/sergiyyevtushenko/vibe-ensemble-mcp"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (for future stages)
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# CLI and config
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "1.0"
