[package]
name = "vibe-ensemble-mcp"
version = "0.8.2"
edition = "2021"
description = "Multi-agent coordination MCP server for Claude Code"
license = "Apache-2.0"
authors = ["Sergiy Yevtushenko"]
repository = "https://github.com/siy/vibe-ensemble-mcp"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (for future stages)
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dashmap = "5.5"

# CLI and config
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "1.0"
