[package]
name = "vibe-ensemble-mcp"
version = "0.9.9"
edition = "2021"
description = "Multi-agent coordination MCP server for Claude Code"
license = "Apache-2.0"
authors = ["Sergiy Yevtushenko"]
repository = "https://github.com/siy/vibe-ensemble-mcp"

[package.metadata.generate-rpm]
summary = "Multi-agent coordination MCP server for Claude Code"
license = "Apache-2.0"
group = "Development/Tools"
url = "https://github.com/siy/vibe-ensemble-mcp"
assets = [
    { source = "target/release/vibe-ensemble-mcp", dest = "/usr/bin/vibe-ensemble-mcp", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/vibe-ensemble-mcp/README.md", mode = "644" }
]

[package.metadata.deb]
maintainer = "Sergiy Yevtushenko <sergiy.yevtushenko@gmail.com>"
copyright = "2024, Sergiy Yevtushenko <sergiy.yevtushenko@gmail.com>"
license-file = ["LICENSE"]
extended-description = """\
A multi-agent coordination system that enables Claude Code to manage specialized AI workers for complex development tasks.\
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/vibe-ensemble-mcp", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/vibe-ensemble-mcp/", "644"],
]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }

# WebSocket support (using Axum's built-in WebSocket extractor)

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (for future stages)
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros", "migrate"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dashmap = "5.5"
base64 = "0.21"
dirs = "5.0"

# CLI and config
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Cleanup and resource management
scopeguard = "1.2"

# HTTP client for update checking
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
