[package]
name = "vibe-ensemble-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain models and traits for Vibe Ensemble MCP server"
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3.0"