[package]
name = "vibe-ensemble-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP protocol implementation for Vibe Ensemble"
rust-version.workspace = true
publish = false

[dependencies]
vibe-ensemble-core = { path = "../vibe-ensemble-core" }
vibe-ensemble-storage = { path = "../vibe-ensemble-storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
humantime = "2"

[dev-dependencies]
sqlx = { workspace = true }

# Binary removed - functionality consolidated into vibe-ensemble
# Use: vibe-ensemble --mcp-only --transport=stdio