[[bin]]
name = "vibe-ensemble"
path = "src/main.rs"

[package]
name = "vibe-ensemble-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for coordinating multiple Claude Code instances"
rust-version.workspace = true
publish = false

[features]
test-support = []

[dependencies]
vibe-ensemble-core = { path = "../vibe-ensemble-core" }
vibe-ensemble-storage = { path = "../vibe-ensemble-storage" }
vibe-ensemble-web = { path = "../vibe-ensemble-web" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-trait = "0.1"
serde_with = "3"

# Required for transport functionality
futures-util = { workspace = true }
humantime = "2"

[dev-dependencies]
sqlx = { workspace = true }
fake = { version = "2.9", features = ["derive", "chrono"] }
tempfile = "3.8"
reqwest = { workspace = true }
tokio-test = "0.4"