[package]
name = "vibe-ensemble-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Security and authentication layer for Vibe Ensemble MCP server"
rust-version.workspace = true

[dependencies]
vibe-ensemble-core = { path = "../vibe-ensemble-core" }
vibe-ensemble-storage = { path = "../vibe-ensemble-storage" }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }

# Security and authentication
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
governor = { workspace = true }
nonzero_ext = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }

# Web framework (for middleware)
axum = { workspace = true }
tower = { workspace = true }
headers = { workspace = true }
tower-http = { workspace = true, features = ["set-header"] }

# Random utilities
rand = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"