[package]
name = "vibe-ensemble-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistence layer for Vibe Ensemble MCP server"
rust-version.workspace = true

[dependencies]
vibe-ensemble-core = { path = "../vibe-ensemble-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }