[package]
name = "vibe-ensemble-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistence layer for Vibe Ensemble MCP server"
rust-version.workspace = true

[dependencies]
vibe-ensemble-core = { path = "../vibe-ensemble-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Performance optimizations
moka = { version = "0.12", features = ["future"] }
lru = "0.12"
dashmap = "5.5"
flate2 = "1.0"
parking_lot = "0.12"
rayon = "1.8"
num_cpus = "1.16"
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3.8"