[package]
name = "vibe-ensemble-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web interface for Vibe Ensemble MCP server"
rust-version.workspace = true

# Binary removed - functionality consolidated into vibe-ensemble
# Use: vibe-ensemble --web-only

[features]
secure_cookies = []  # For enabling Secure cookie attribute in production

[dependencies]
vibe-ensemble-core = { path = "../vibe-ensemble-core" }
vibe-ensemble-storage = { path = "../vibe-ensemble-storage" }
tokio = { workspace = true }
axum = { workspace = true, features = ["matched-path", "ws", "form"] }
tower = { workspace = true }
tower-http = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
urlencoding = "2.1"
